[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/action_hint/ActionHint.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/action_hint/action_hint_action.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/ui/action_hint/action_hint_border.tres" type="SpriteFrames" id=3]

[node name="action_hint" type="AnimatedSprite"]
frames = ExtResource( 2 )
animation = "c"
frame = 2
playing = true
centered = false
script = ExtResource( 1 )

[node name="action_hint_visibility_timer" type="Timer" parent="."]
one_shot = true

[node name="action_hint_visibility_tween" type="Tween" parent="."]

[node name="border" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "normal"
playing = true
centered = false

[connection signal="timeout" from="action_hint_visibility_timer" to="." method="_on_action_hint_visibility_timer_timeout"]
[connection signal="tween_all_completed" from="action_hint_visibility_tween" to="." method="_on_action_hint_visibility_tween_tween_all_completed"]
